# code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: python-test.yml
dear/datasets/: dataset_factory.py  dear_dataset.py
dear/utils/: split_mixin.py
tests/datasets/: test_dataset_factory.py  test_dear_dataset.py
tests/utils/: test_split_mixin.py
